// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <RecordsOfTablePopoverProcedures /> should renders with props correctly 1`] = `
<div
  className="form-group-wrapper"
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Procedure Name
        </label>
        <div
          className="form-control-static"
        >
          a test request23 changed
        </div>
      </div>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Date of Procedure
        </label>
        <div
          className="form-control-static"
        >
          01-Jan-2018
        </div>
      </div>
    </Col>
  </Row>
  <div
    className="form-group"
  >
    <label
      className="control-label"
    >
      Procedure Performed By
    </label>
    <div
      className="form-control-static"
    >
      Performer changed
    </div>
  </div>
  <div
    className="form-group"
  >
    <label
      className="control-label"
    >
      Procedure Notes
    </label>
    <div
      className="form-control-static"
    >
      testing23 changed
    </div>
  </div>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Date
        </label>
        <div
          className="form-control-static"
        >
          01-Jan-2018
        </div>
      </div>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Source
        </label>
        <div
          className="form-control-static"
        >
          ethercis
        </div>
      </div>
    </Col>
  </Row>
</div>
`;

exports[`Component <RecordsOfTablePopoverProcedures /> should renders with props correctly with empty detail 1`] = `
<div
  className="form-group-wrapper"
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Procedure Name
        </label>
        <div
          className="form-control-static"
        />
      </div>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Date of Procedure
        </label>
        <div
          className="form-control-static"
        >
          01-Jan-2018
        </div>
      </div>
    </Col>
  </Row>
  <div
    className="form-group"
  >
    <label
      className="control-label"
    >
      Procedure Performed By
    </label>
    <div
      className="form-control-static"
    />
  </div>
  <div
    className="form-group"
  >
    <label
      className="control-label"
    >
      Procedure Notes
    </label>
    <div
      className="form-control-static"
    />
  </div>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Date
        </label>
        <div
          className="form-control-static"
        >
          01-Jan-2018
        </div>
      </div>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={6}
      xs={12}
    >
      <div
        className="form-group"
      >
        <label
          className="control-label"
        >
          Source
        </label>
        <div
          className="form-control-static"
        />
      </div>
    </Col>
  </Row>
</div>
`;
